--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 :root {
   font-size: 62.5%;
 }
@@ -20,234 +21,818 @@ a {
 
 nav {
   width: 100%;
-  height: 10vh;
+  min-height: 50px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   position: fixed;
   z-index: 1;
   background-color: #5E2D79;
-  border: 2px solid black;
   color: #FFFFFF;
-  padding: 3rem;
+  padding: 0.5rem 1rem;
+  box-sizing: border-box;
 }
-nav .logo {
-  width: 8.2rem;
-  height: 5.2rem;
+
+nav a .logo {
+  max-width: 100px;
+  height: auto;
 }
+
 nav ul {
-  width: 25vw;
   display: flex;
   justify-content: space-evenly;
   list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 0.8rem;
 }
+
 nav ul li {
-  width: 13rem;
-  height: 5rem;
   font-weight: 700;
   display: flex;
-  flex-direction: row;
   align-items: center;
 }
+
 nav ul li a {
-  font-size: 1.8rem;
+  font-size: 1.2rem;
   color: #FFFFFF;
+  text-decoration: none;
 }
+
 nav ul .liColorida {
   background-color: #FF7F50;
-  border-radius: 1.1rem;
-  display: flex;
-  justify-content: center;
+  border-radius: 0.8rem;
+  padding: 0.3rem 0.6rem;
 }
 
 section {
   width: 100%;
-  height: 50vh;
+  min-height: 400px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 2rem 1rem;
+  box-sizing: border-box;
 }
+
 section h1 {
-  font-size: 4.8rem;
+  font-size: 3rem;
   font-weight: 700;
   color: #1F2937;
   margin-bottom: 1rem;
+  text-align: center;
 }
+
 section p {
-  width: 55vw;
-  font-size: 2.4rem;
+  width: 90%;
+  max-width: 800px;
+  font-size: 1.6rem;
   font-weight: 300;
   text-align: center;
+  line-height: 1.5;
 }
 
 .cards {
   width: 100%;
-  height: 60vh;
+  min-height: 400px;
+  /* Altura mínima para garantir espaço */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background: linear-gradient(rgba(94, 45, 121, 0.7), rgba(94, 45, 121, 0.7)), url(../assets/mulher.jpg);
   background-repeat: no-repeat;
-  background-size: 100% 60%;
+  background-size: cover;
   background-position: top;
+  padding: 2rem 1rem;
 }
+
 .cards h2 {
-  font-size: 4.8rem;
+  font-size: 3.5rem;
   font-weight: 700;
   color: #FFFFFF;
+  margin-bottom: 1.5rem;
 }
+
 .cards .card__container {
-  width: 90%;
+  width: 95%;
+  max-width: 1200px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-top: 6rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2rem;
+  margin-top: 2rem;
+  /* Reduzido o margin top */
 }
+
 .cards .card__container .card {
-  width: 35.6rem;
-  height: 26.8rem;
+  width: calc(50% - 1rem);
+  min-width: 300px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: left;
+  align-items: flex-start;
   background-color: #FFFFFF;
-  padding: 2rem;
-  border-radius: 1.8rem;
-  box-shadow: 0px 9px 9px 0px rgba(107, 69, 115, 0.1019607843);
+  padding: 1.5rem;
+  border-radius: 1.5rem;
+  box-shadow: 0px 5px 5px 0px rgba(107, 69, 115, 0.1019607843);
 }
+
 .cards .card__container .card .card__titulo {
-  width: 70%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
   align-items: center;
-  font-size: 2.4rem;
-  font-weight: 600;
-  color: #5E2D79;
-}
-.cards .card__container .card .card__titulo img {
-  width: 3.2rem;
-  height: 3.2rem;
-}
-.cards .card__container .card p {
-  font-size: 1.8rem;
-}
-.cards .card__container .card a {
+  gap: 1rem;
   font-size: 2rem;
   font-weight: 600;
   color: #5E2D79;
-  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+.cards .card__container .card .card__titulo img {
+  width: 2.8rem;
+  height: 2.8rem;
+}
+
+.cards .card__container .card p {
+  font-size: 1.6rem;
+  line-height: 1.5;
+}
+
+.cards .card__container .card .card__link {
+  width: 100%;
+}
+
+.cards .card__container .card .card__link a {
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: #5E2D79;
+  margin-top: 1rem;
+  display: block;
 }
 
 .help {
   width: 100%;
-  height: 60vh;
+  min-height: 400px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 2rem 1rem;
 }
+
 .help h4 {
-  font-size: 3.6rem;
+  font-size: 3rem;
   font-weight: 600;
   color: #1F2937;
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
+
 .help .paragrafo__cima {
-  width: 55vw;
-  font-size: 2rem;
+  width: 90%;
+  max-width: 800px;
+  font-size: 1.8rem;
   font-weight: 400;
   text-align: center;
+  margin-bottom: 2rem;
 }
+
 .help .help__container {
-  width: 100%;
-  height: 60vh;
+  width: 95%;
+  max-width: 1200px;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
+  gap: 2rem;
 }
+
 .help .help__container .secao {
-  width: 58.5rem;
-  height: 30rem;
+  width: calc(50% - 1rem);
+  min-width: 300px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: left;
+  align-items: flex-start;
   background-color: #FFFFFF;
-  padding: 2rem;
-  border-radius: 1.8rem;
-  box-shadow: 0px 9px 9px 0px rgba(107, 69, 115, 0.1019607843);
+  padding: 1.5rem;
+  border-radius: 1.5rem;
+  box-shadow: 0px 5px 5px 0px rgba(107, 69, 115, 0.1019607843);
 }
+
 .help .help__container .secao .secao__titulo {
-  width: 85%;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  gap: 1.5rem;
-  font-size: 2.4rem;
+  gap: 1rem;
+  font-size: 2rem;
   font-weight: 600;
   color: #5E2D79;
+  margin-bottom: 1rem;
+  width: max-content;
 }
+
 .help .help__container .secao .secao__titulo img {
-  width: 3.2rem;
-  height: 3.2rem;
+  width: 2.8rem;
+  height: 2.8rem;
 }
+
 .help .help__container .secao .paragrafo__baixo {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
+  line-height: 1.5;
 }
+
 .help .help__container .secao ul {
-  font-size: 1.8rem;
-  padding: 2rem;
+  font-size: 1.6rem;
+  padding-left: 1.5rem;
+  margin-top: 1rem;
 }
 
 footer {
   width: 100%;
-  height: 20vh;
+  min-height: 150px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: #FFFFFF;
   background-color: #5E2D79;
-  padding-top: 2rem;
+  padding: 2rem 1rem;
 }
+
 footer .footer__container {
-  width: 80%;
-  height: 15vh;
+  width: 90%;
+  max-width: 1200px;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: center;
-  margin-bottom: 3rem;
-}
-footer .footer__container div {
-  width: 40%;
-  height: 15vh;
-  padding: 0 2rem;
-}
-footer .footer__container div h5 {
-  font-size: 2rem;
-  font-weight: 700;
+  align-items: flex-start;
   margin-bottom: 2rem;
+  gap: 2rem;
 }
+
+footer .footer__container div {
+  width: calc(50% - 2rem);
+  min-width: 250px;
+  padding: 1rem;
+}
+
+footer .footer__container div h5 {
+  font-size: 1.8rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
 footer .footer__container div ul {
-  padding-left: 2rem;
-  font-size: 1.5rem;
+  padding-left: 1.5rem;
+  font-size: 1.4rem;
 }
+
 footer .footer__container div ul li span {
   font-weight: 600;
 }
+
 footer .footer__container div .alunos {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px; /* Espaçamento opcional entre os itens */
+  gap: 5px;
 }
+
 footer .footer__container div .alunos li {
-  flex: 1 1 calc(33.33% - 10px); /* Define 1/3 da largura da UL, considerando o gap */
-  max-width: calc(33.33% - 10px); /* Garante que não ultrapasse o limite */
-}/*# sourceMappingURL=style.css.map */
+  flex: 1 1 calc(33.33% - 5px);
+  max-width: calc(33.33% - 5px);
+  font-size: 1.3rem;
+}
+
+/* Responsividade Global */
+@media screen and (max-width: 1440px) {
+
+  .cards .card__container,
+  .help .help__container {
+    max-width: 1200px;
+  }
+}
+
+/* Desktop médio */
+@media screen and (max-width: 1200px) {
+  .cards .card__container .card {
+    width: calc(50% - 2rem);
+  }
+}
+
+/* Tablets e laptops */
+@media screen and (max-width: 1024px) {
+  nav {
+    flex-direction: column;
+    height: auto;
+    padding: 1rem;
+  }
+
+  nav ul {
+    width: 100%;
+    justify-content: center;
+    gap: 1.5rem;
+    padding: 1rem 0;
+  }
+
+  section {
+    padding-top: 10rem;
+  }
+
+  .cards .card__container,
+  .help .help__container {
+    width: 90%;
+  }
+}
+
+/* Tablets */
+@media screen and (max-width: 768px) {
+  :root {
+    font-size: 56.25%;
+  }
+
+  nav ul {
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+
+  section h1 {
+    font-size: 2.8rem;
+  }
+
+  .cards h2 {
+    font-size: 3rem;
+  }
+
+  .cards .card__container .card {
+    width: 100%;
+    max-width: 500px;
+  }
+
+  .help .help__container .secao {
+    width: 100%;
+    max-width: 500px;
+  }
+
+  footer .footer__container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  footer .footer__container div {
+    width: 100%;
+    text-align: center;
+  }
+
+  /* Ajustes do formulário */
+  .formulario-ajuda {
+    width: 90%;
+  }
+
+  .form-row {
+    flex-direction: column;
+  }
+}
+
+/* Dispositivos móveis grandes */
+@media screen and (max-width: 576px) {
+  :root {
+    font-size: 50%;
+  }
+
+  nav {
+    padding: 0.8rem;
+  }
+
+  nav ul {
+    flex-direction: column;
+    align-items: center;
+    gap: 0.8rem;
+  }
+
+  nav ul li {
+    width: 100%;
+    text-align: center;
+  }
+
+  section {
+    padding-top: 15rem;
+  }
+
+  section h1 {
+    font-size: 2.4rem;
+    padding: 0 1rem;
+  }
+
+  .cards h2 {
+    font-size: 2.4rem;
+  }
+
+  .help h4 {
+    font-size: 2.4rem;
+  }
+
+  .modal .conteudo-modal {
+    width: 95%;
+    padding: 1.5rem;
+  }
+}
+
+/* Dispositivos móveis médios */
+@media screen and (max-width: 480px) {
+  nav a .logo {
+    width: 70px;
+  }
+
+  .cards .card__container .card,
+  .help .help__container .secao {
+    padding: 1.2rem;
+  }
+
+  .form-grupo input,
+  .form-grupo textarea {
+    padding: 1rem;
+  }
+
+  footer .footer__container div .alunos li {
+    flex: 1 1 100%;
+    max-width: 100%;
+  }
+}
+
+/* Dispositivos móveis pequenos */
+@media screen and (max-width: 360px) {
+  :root {
+    font-size: 45%;
+  }
+
+  nav a .logo {
+    width: 60px;
+  }
+
+  .formulario-ajuda {
+    padding: 1rem;
+  }
+
+  .modal .conteudo-modal {
+    padding: 1rem;
+  }
+}
+
+/* Ajustes de altura */
+@media screen and (max-height: 700px) {
+  section {
+    min-height: 350px;
+  }
+
+  .modal .conteudo-modal {
+    max-height: 85vh;
+    overflow-y: auto;
+  }
+}
+
+/* Orientação paisagem em dispositivos móveis */
+@media screen and (max-width: 900px) and (orientation: landscape) {
+  nav {
+    position: relative;
+  }
+
+  section {
+    padding-top: 2rem;
+    min-height: 450px;
+  }
+
+  .modal .conteudo-modal {
+    max-height: 80vh;
+    overflow-y: auto;
+  }
+
+  .cards .card__container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
+  }
+}
+
+/* Telas muito grandes */
+@media screen and (min-width: 1441px) {
+  :root {
+    font-size: 75%;
+  }
+
+  .cards .card__container,
+  .help .help__container {
+    max-width: 1400px;
+  }
+
+  .modal .conteudo-modal {
+    max-width: 600px;
+  }
+}
+
+/* Suporte para telas de alta densidade */
+@media (-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+
+  .logo,
+  img {
+    image-rendering: -webkit-optimize-contrast;
+  }
+}
+
+/* Modo escuro do sistema */
+@media (prefers-color-scheme: dark) {
+  .modal {
+    background: rgba(0, 0, 0, 0.8);
+  }
+}
+
+/* Preferência de movimento reduzido */
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation: none !important;
+    transition: none !important;
+  }
+}
+
+/* Variáveis CSS */
+:root {
+  --modal-background: rgba(0, 0, 0, 0.5);
+  --modal-content-background: white;
+  --modal-primary-color: #5E2D79;
+  --modal-text-color: #6A6A6A;
+  --modal-border-radius: 10px;
+  --modal-padding: 1.5rem;
+  --modal-font-size-base: 1rem;
+}
+
+/* Modal geral */
+.modal {
+  display: none;
+  /* Inicialmente oculto */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--modal-background);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.conteudo-modal {
+  position: relative;
+  background: var(--modal-content-background);
+  padding: var(--modal-padding);
+  max-height: 90vh;
+  /* Altura máxima para evitar estouro */
+  width: 80vw;
+  /* Largura ajustável */
+  border-radius: var(--modal-border-radius);
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  color: var(--modal-text-color);
+  box-sizing: border-box;
+  overflow-y: auto;
+  /* Adiciona rolagem se o conteúdo for longo */
+}
+
+/* Botão de fechar */
+.fechar-modal {
+  background: #000000;
+  color: white;
+  border: none;
+  border-radius: var(--modal-border-radius);
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-top: 1rem;
+  /* Espaço do conteúdo */
+}
+
+.fechar-modal:hover {
+  background: var(--modal-primary-color);
+}
+
+/* Conteúdo do modal */
+.titulo-modal {
+  color: var(--modal-primary-color);
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.texto-resumo-modal {
+  font-size: 1.2rem;
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+
+.titulo-lista-modal {
+  color: var(--modal-primary-color);
+  font-size: 1.5rem;
+  margin-top: 1.5rem;
+}
+
+.lista-modal {
+  list-style: none;
+  padding: 0;
+}
+
+.item-lista-modal {
+  font-size: 1rem;
+  margin: 0.5rem 0;
+}
+
+.texto-modal {
+  font-size: 1rem;
+  font-weight: 700;
+  margin-top: 2rem;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+  .conteudo-modal {
+    width: 95vw;
+    padding: 1rem;
+  }
+
+  .titulo-modal {
+    font-size: 1.8rem;
+  }
+
+  .texto-resumo-modal,
+  .item-lista-modal,
+  .texto-modal {
+    font-size: 0.9rem;
+  }
+
+  .titulo-lista-modal {
+    font-size: 1.3rem;
+  }
+}
+
+
+.leia-mais {
+  color: var(--modal-primary-color);
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.leia-mais:hover {
+  text-decoration: underline;
+}
+
+/* Estilos do formulário */
+.formulario-ajuda {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  background: #fff;
+  border-radius: 20px;
+  padding: 2rem;
+}
+
+.form-row {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.form-grupo {
+  margin-bottom: 1.5rem;
+  width: 100%;
+}
+
+.form-grupo label {
+  display: block;
+  font-size: 1.4rem;
+  color: #333;
+  margin-bottom: 0.5rem;
+}
+
+.form-grupo input,
+.form-grupo textarea {
+  width: 100%;
+  padding: 1.2rem;
+  border: 1px solid #E5E5E5;
+  border-radius: 8px;
+  font-size: 1.4rem;
+  font-family: inherit;
+  background: #F8F8F8;
+}
+
+.form-grupo textarea {
+  resize: none;
+  min-height: 100px;
+}
+
+.input-icon {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.input-icon .icon {
+  position: absolute;
+  left: 1rem;
+  font-size: 1.4rem;
+}
+
+.input-icon .prefix {
+  position: absolute;
+  left: 1rem;
+  color: #666;
+  font-size: 1.4rem;
+}
+
+.input-icon input {
+  padding-left: 4rem;
+}
+
+.char-counter {
+  text-align: right;
+  font-size: 1.2rem;
+  color: #666;
+  margin-top: 0.5rem;
+}
+
+.enviar-form {
+  width: 100%;
+  background: #5E2D79;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  padding: 1.2rem;
+  cursor: pointer;
+  font-size: 1.4rem;
+  font-weight: 600;
+  transition: background-color 0.3s ease;
+}
+
+.enviar-form:hover {
+  background: #4a2361;
+}
+
+.conteudo-modal {
+  background: #fff;
+  padding: 2rem;
+  border-radius: 20px;
+  width: 90%;
+  max-width: 500px;
+}
+
+.titulo-modal {
+  color: #333;
+  font-size: 2.4rem;
+  margin-bottom: 0.5rem;
+  text-align: left;
+}
+
+.texto-resumo-modal {
+  color: #666;
+  font-size: 1.4rem;
+  margin-bottom: 2rem;
+  text-align: left;
+}
+
+/* Responsividade do formulário */
+@media (max-width: 768px) {
+  .form-row {
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+
+  .form-grupo label {
+    font-size: 1.2rem;
+  }
+
+  .form-grupo input,
+  .form-grupo textarea {
+    font-size: 1.2rem;
+    padding: 1rem;
+  }
+
+  .enviar-form {
+    font-size: 1.2rem;
+    padding: 1rem;
+  }
+}
+
+/* Placeholder styles */
+.form-grupo input::placeholder,
+.form-grupo textarea::placeholder {
+  color: #999;
+}
+
+/* Focus styles */
+.form-grupo input:focus,
+.form-grupo textarea:focus {
+  outline: none;
+  border-color: #5E2D79;
+  background: #fff;
+}
