--- a/styles.css/style.scss
+++ b/styles.css/style.scss
@@ -32,9 +32,11 @@ nav {
     color: #FFFFFF;
     padding: 3rem;
 
-    .logo {
-        width: 8.2rem;
-        height: 5.2rem;
+    a {
+        .logo {
+            width: 15.2rem;
+            height: 9.2rem;
+        }
     }
 
     ul {
@@ -114,7 +116,7 @@ section {
         justify-content: space-evenly;
         align-items: center;
         margin-top: 6rem;
-    
+
         .card {
             width: 35.6rem;
             height: 26.8rem;
@@ -128,11 +130,12 @@ section {
             box-shadow: 0px 9px 9px 0px #6B45731A;
 
             .card__titulo {
-                width: 70%;
+                width: 90%;
                 display: flex;
                 flex-direction: row;
-                justify-content: space-evenly;
+                justify-content: left;
                 align-items: center;
+                gap: 1rem;
                 font-size: 2.4rem;
                 font-weight: 600;
                 color: #5E2D79;
@@ -147,12 +150,18 @@ section {
                 font-size: 1.8rem;
             }
 
-            a {
-                font-size: 2rem;
-                font-weight: 600;
-                color: #5E2D79;
-                margin-top: 2rem;
+            .card__link {
+                width: 50%;
+
+                a {
+                    font-size: 2rem;
+                    font-weight: 600;
+                    color: #5E2D79;
+                    margin-top: 2rem;
+                    margin-right: 0.5rem;
+                }
             }
+
         }
     }
 }
@@ -273,11 +282,14 @@ footer {
             .alunos {
                 display: flex;
                 flex-wrap: wrap;
-                gap: 10px; /* Espaçamento opcional entre os itens */
+                gap: 10px;
+                /* Espaçamento opcional entre os itens */
 
                 li {
-                    flex: 1 1 calc(33.33% - 10px); /* Define 1/3 da largura da UL, considerando o gap */
-                    max-width: calc(33.33% - 10px); /* Garante que não ultrapasse o limite */
+                    flex: 1 1 calc(33.33% - 10px);
+                    /* Define 1/3 da largura da UL, considerando o gap */
+                    max-width: calc(33.33% - 10px);
+                    /* Garante que não ultrapasse o limite */
                 }
             }
         }
